<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large" >

        <!-- Labela i Spinner za ljubimca -->
        <TextView
            style="@style/WidgetAppTextPrimaryBold"
            android:text="@string/select_pet"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spinnerPets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Labela i Spinner za veterinara -->
        <TextView
            style="@style/WidgetAppTextPrimaryBold"
            android:text="@string/select_vet"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spinnerVets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Labela i Spinner za uslugu -->
        <TextView
            style="@style/WidgetAppTextPrimaryBold"
            android:text="@string/select_service"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spinnerServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Odabrani datum i vrijeme -->
        <TextView
            style="@style/WidgetAppTextPrimaryBold"
            android:text="@string/selected_datetime"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textViewSelectedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_date_selected"
            android:textSize="16sp"
            android:textColor="@color/colorOnBackground"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginLeft="@dimen/spacing_small"/>

        <!-- Dugmad za odabir datuma i vremena -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSelectDate"
            style="@style/Button.Primary"
            android:text="@string/select_date" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSelectTime"
            style="@style/Button.Primary"
            android:text="@string/select_time" />

        <!-- Dugme za potvrdu termina -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAddAppointment"
            style="@style/Button.Primary"
            android:text="@string/add_appointment" />
    </LinearLayout>
</ScrollView>
