<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/WidgetAppCardDefault"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/card_padding">

        <!-- Pet info -->
        <TextView
            android:id="@+id/textViewPetName"
            style="@style/WidgetAppTextPrimaryBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pet_name" />

        <TextView
            android:id="@+id/textViewService"
            style="@style/WidgetAppTextSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service" />

        <!-- Appointment date -->
        <TextView
            android:id="@+id/textViewDate"
            style="@style/WidgetAppTextSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_date" />

        <!-- Buttons row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="@dimen/spacing_small">

            <Button
                android:id="@+id/buttonCancel"
                style="@style/WidgetAppButtonSecondarySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/buttonPay"
                style="@style/WidgetAppButtonSecondarySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay"
                android:layout_marginStart="@dimen/spacing_small" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
