<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/WidgetAppCardDefault"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/card_padding">

        <TextView
            android:id="@+id/textDatePaid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/WidgetAppCardTitle"
            android:text="@string/paid_on" />

        <TextView
            android:id="@+id/textDateAppointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/WidgetAppTextSecondary"
            android:text="@string/appointment_on" />

        <TextView
            android:id="@+id/textDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/WidgetAppTextSecondary"
            android:text="@string/details_placeholder" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
