<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/welcome_nav_graph"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="org.unibl.etf.vetclinic.ui.welcome.WelcomeFragment"
        android:label="@string/welcome_message" >
        <action
            android:id="@+id/action_welcomeFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="org.unibl.etf.vetclinic.ui.welcome.LoginFragment"
        android:label="@string/login">
    <action
        android:id="@+id/action_loginFragment_to_RegisterFragment"
        app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="org.unibl.etf.vetclinic.ui.welcome.RegisterFragment"
        android:label="@string/register">
    <action
        android:id="@+id/action_registerFragment_to_loginFragment"
        app:destination="@id/loginFragment" />
    </fragment>
</navigation>
