<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_medium"
    android:layout_marginTop="@dimen/spacing_large">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputField.Outlined"
            android:hint="@string/pet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputField.Outlined"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/species">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPetSpecies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputField.Outlined"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/breed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPetBreed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAddPet"
            style="@style/Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_pet" />
    </LinearLayout>
</ScrollView>
