<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/spacing_large">

    <!-- Upcoming Appointments -->
    <TextView
        android:id="@+id/textUpcoming"
        style="@style/WidgetAppTextPrimaryBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_appointments"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/spacing_medium" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUpcoming"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_medium"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/textUpcoming"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Past Appointments -->
    <TextView
        android:id="@+id/textPast"
        style="@style/WidgetAppTextPrimaryBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/past_appointments"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewUpcoming"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/spacing_medium" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPast"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_medium"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/textPast"
        app:layout_constraintBottom_toTopOf="@+id/fabAddAppointment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Floating button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddAppointment"
        style="@style/WidgetAppFloatingActionButtonPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_appointment"
        app:srcCompat="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/fab_margin_bottom"
        android:layout_marginEnd="@dimen/spacing_medium" />

</androidx.constraintlayout.widget.ConstraintLayout>
